--- a/front-end/src/components/Form/OrderDetailForm.css
+++ b/front-end/src/components/Form/OrderDetailForm.css
@@ -1,75 +1,45 @@
-/* .order-detail-form-type-container{
-    border: solid 1px black;
-    display: flex;
-}
-.order-detail-form-type-item{
-    border: solid 1px black;
-}
-
-.order-detail-form-size{
-    display: flex;
-}
-
-.sizes{
-    border-radius: 50%;
-    border: solid 1px black;
-} */
-
-.item-options{
-    display: flex;
-    flex: 1;
-}
-.item-sizes{
-    display: flex;
-    border: red solid 1px;
-}
-.item-variants{
-    display: flex;
-}
-
-
-.item-options input[type=radio]{
+.input-option input[type=radio]{
     visibility: hidden;
+    position: absolute;
 }
 
-.item-variants label {
-    color: grey;
-    border: solid 1px black;
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-
-.item-variants input[type=radio]:checked + label{
-    background-color: aquamarine;
-    color: black;
-}
-
-.item-sizes input[type=radio]{
-    visibility: hidden;
-}
-
-.item-sizes label {
-    width: 50px;
-    height: 50px;
-    padding: 1rem;
-    color: grey;
-    border: solid 1px black;
-    border-radius: 50%;
+.input-option {
     display: flex;
+    text-transform: uppercase;
+    padding: .25rem;
+    color: grey;
+    border: solid 1px rgba(0 0 0 / 24%);
     justify-content: center;
     align-items: center;
     font-size: 18px;
     cursor: pointer;
+    
 }
 
+.input-options{
+    margin-top: 12px;
+    display: flex;
+    flex-direction: row;
+    column-gap: .25rem
+    ;
+}
 
-.item-sizes input[type=radio]:checked + label{
-    background-color: aquamarine;
+.input-option.selected{
+    background-color: salmon;
     color: black;
 }
 
-
+.order-detail-form-add-to-cart{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 12px;
+    right: 12px;
+    column-gap: 1rem;
+}
+.order-detail-form-quantity{
+    width: 2rem;
+    border-radius: 5px;
+}
 
