--- a/front-end/src/components/Menu/Menu.css
+++ b/front-end/src/components/Menu/Menu.css
@@ -1,13 +1,45 @@
-.menu-boxes{
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.menu-category-header{
+    font-size: large;
+    text-transform: capitalize;
 }
-.menu-boxes h2{
-    text-transform: uppercase;
-    color: white;
+.menu-products-in-category-container{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.product-card{
+    width: calc(50% - 12px);
+    padding: 16px 14px;
+    border: solid 1px rgba(0 0 0 / 12%);
+    border-radius: 5px;
+    margin: 0 0 20px 0;
+    cursor: pointer;
+}
+
+.product-card:hover{
+    border: solid 1px rgba(0 0 0 / 36%);
+}
+
+.product-name{
+    font-size: medium;
+    text-transform: capitalize;
+    grid-area: name;
+}
+.product-price{
+    grid-area: price;
+}
+
+.product-info{
+    display: grid;
+    grid-template-areas: 
+    "name price"
+    "description price"
+    ;
+
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
+    row-gap: 4px;
+    column-gap: 16px;
 }
