orders.layout height lowered

--- a/front-end/src/pages/OrderPage/OrderPage.css
+++ b/front-end/src/pages/OrderPage/OrderPage.css
@@ -1,10 +1,10 @@
 .orders-layout{
-
     display: grid;
     grid-template-areas: 
     "menu cart";
     grid-template-columns: 1fr 375px;
     position: relative;
+    padding-top: 22px;
 }
 
 .orders-menu{
