--- a/front-end/src/pages/LoginPage/LoginPage.css
+++ b/front-end/src/pages/LoginPage/LoginPage.css
@@ -7,6 +7,7 @@
 }
 
 .login-card {
+  position: relative;
   border: none;
   flex-direction: column;
   background-color: white;
@@ -30,8 +31,9 @@
 }
 
 .logo {
-  position: relative;
-  bottom: 20vh;
+  position: absolute;
+  top: 60px;
+  right: 6%;
   height: 8vh;
 }
 ::placeholder {
