--- a/front-end/src/components/Menu/Menu.css
+++ b/front-end/src/components/Menu/Menu.css
@@ -1,10 +1,10 @@
 .menu-category-header{
-    font-size: large;
+    font-size: xxlarge;
     text-transform: capitalize;
 }
 .menu-products-in-category-container{
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
     width: 100%;
 }
